# BomberMan

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean  debug  mr
inc/: Matrix.hpp  WorldsObject.hpp
inc/Common/: Angle.hpp  BaseShape.hpp  Delegate.hpp
inc/Rendering/: AnimationManager.hpp
lib/TinyXML/: CMakeLists.txt
res/: BlowAnimation.xml  Bomb.xml  DefaultWObjAttr.xml  FireAnimation.xml  WObjectsList.xml  WObjectsList.xml.old  mapGrid
src/: .Game.cpp.swp  AIPlayer.cpp  AIPlayer.hpp  Application.cpp  Application.hpp  Bomb.cpp  Bomb.hpp  Cell.cpp  Cell.hpp  Game.cpp  Game.hpp  GameMap.cpp  GameMap.hpp  GameStage.cpp  GameStage.hpp  GlobalConf.hpp  GlobalEventManager.cpp  GlobalEventManager.hpp  IStateStack.cpp  IStateStack.hpp  Item.cpp  Item.hpp  LWVector.hpp  Matrix.hpp  Person.cpp  Person.hpp  Player.hpp  ResourceManager.cpp  ResourceManager.hpp  StateStack.cpp  StateStack.hpp  Timer.hpp  Vector2D.hpp  WorldsObject.cpp  main.cpp
src/Application/: Application.cpp  Application.hpp  GlobalEventManager.cpp  GlobalEventManager.hpp  StateStack.cpp  StateStack.hpp
src/Common/: Algorithms.hpp  BaseShape.hpp  BasicTypes.hpp  Button.cpp  Button.hpp  Deferred.hpp  Delegate.hpp  IDeferred.hpp  Matrix.hpp  StateTransitions.hpp  StatesID.hpp  Timer.hpp  Vec2.hpp  Vector2D.hpp
src/Game/: Collision.hpp  CollisionManager.cpp  CollisionManager.hpp  DrawableScene.cpp  DrawableScene.hpp  GameLevel.cpp  GameLevel.hpp  GameState.cpp  GameState.hpp  Keyset.hpp  LevelBackground.cpp  LevelBackground.hpp  WObjectSignal.hpp
src/GameStates/: GameIsOnState.cpp  GameIsOnState.hpp  IState.cpp  IState.hpp  State.cpp  State.hpp  StateStack.cpp  StateStack.hpp
src/Managers/: Animation.cpp  Animation.hpp  AnimationManager.cpp  AnimationManager.hpp  EventManager.cpp  EventManager.hpp  GlobalEventManager.cpp  GlobalEventManager.hpp  PlayerEventManager.cpp  PlayerEventManager.hpp  ResourceManager.cpp  ResourceManager.hpp
src/Menu/: Button.cpp  MainMenuState.cpp  MainMenuState.hpp
src/Rendering/: Animation.cpp  Animation.hpp  AnimationManager.cpp  AnimationManager.hpp
src/States/: GameMenuState.cpp  GameMenuState.hpp  GameOverState.cpp  GameOverState.hpp  GameState.cpp  GameState.hpp  IAppState.cpp  IAppState.hpp  MainMenuState.cpp  MainMenuState.hpp
src/WorldsObjects/: AIPlayer.hpp  Actions.cpp  Actions.hpp  Actor.cpp  Actor.hpp  Bomb.cpp  Bomb.hpp  Item.hpp  ObjectProperties.hpp  Person.cpp  Person.hpp  Player.cpp  Player.hpp  WorldsObject.cpp  (+1 more)
(+40 files in other folders)
